Add log4j2 config.xml Add Main class for test loading jars to Parabot's ClassPath class Encapsulate fields of JavaField, ClientClass, ApiInterface, all of which are final, and initalized in various constructors Add support for ASM ClassNode, MethodNode etc to "dummy classes" which are now wrappers for serialization to TableView/ListView Revamp label of loaded api/client jar path to show method, interface, field counts

--- a/src/com/jackw/views/tab2.fxml
+++ b/src/com/jackw/views/tab2.fxml
@@ -53,7 +53,7 @@
             <TableColumn prefWidth="75.0" text="Cl. F. Type" />
          </columns>
       </TableView>
-      <Button fx:id="button_setter" layoutX="343.0" layoutY="255.0" mnemonicParsing="false" text="Bind Setter" />
-      <CheckBox fx:id="tickbox_static" layoutX="179.0" layoutY="259.0" mnemonicParsing="false" text="Make new method static" />
+      <Button fx:id="button_setter" layoutX="343.0" layoutY="255.0" mnemonicParsing="false" onAction="#onAction" text="Bind Setter" />
+      <CheckBox fx:id="tickbox_static" layoutX="179.0" layoutY="259.0" mnemonicParsing="false" onAction="#onAction" text="Make new method static" />
    </children>
 </AnchorPane>
