--- a/src/com/jackw/views/tab1.fxml
+++ b/src/com/jackw/views/tab1.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane fx:id="pane" prefHeight="365.0" prefWidth="587.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jackw.controllers.Tab1Controller">
    <children>
@@ -93,5 +93,6 @@
       <Label layoutX="14.0" layoutY="18.0" text="API:" />
       <Label layoutX="14.0" layoutY="53.0" text="Client:" />
       <Label layoutX="357.0" layoutY="88.0" text="API Acessor to Client Class Bindings" />
+      <CheckBox fx:id="checkbox_hide_inners" layoutX="257.0" layoutY="88.0" mnemonicParsing="false" onAction="#onAction" selected="true" text="Hide inners" />
    </children>
 </AnchorPane>
