--- a/src/com/jackw/views/tab2.fxml
+++ b/src/com/jackw/views/tab2.fxml
@@ -22,13 +22,13 @@
       <Label layoutX="36.0" layoutY="71.0" text="1. Accessor: " />
       <ChoiceBox fx:id="box_accessor" layoutX="120.0" layoutY="67.0" prefWidth="150.0" />
       <Label fx:id="label_api_fields" layoutX="36.0" layoutY="105.0" text="2. Available API methods:" />
-      <ChoiceBox fx:id="box_api_fields" disable="true" layoutX="195.0" layoutY="101.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="box_api_fields" disable="true" layoutX="195.0" layoutY="101.0" prefHeight="25.0" prefWidth="343.0" />
       <Label layoutX="288.0" layoutY="71.0" text="Associated Client Class:" />
       <TextField fx:id="text_client_class" editable="false" layoutX="415.0" layoutY="67.0" prefHeight="25.0" prefWidth="170.0" text="?" />
       <Label fx:id="label_client_fields_typed" layoutX="36.0" layoutY="140.0" text="3. Available Client Fields by Type:" />
-      <ChoiceBox fx:id="box_client_fields_typed" disable="true" layoutX="242.0" layoutY="136.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="box_client_fields_typed" disable="true" layoutX="242.0" layoutY="136.0" prefHeight="25.0" prefWidth="296.0" />
       <Label fx:id="label_all_client_fields" layoutX="36.0" layoutY="176.0" text="3. Alternative: All Client Class Fields:" />
-      <ChoiceBox fx:id="box_client_all_fields" disable="true" layoutX="242.0" layoutY="172.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="box_client_all_fields" disable="true" layoutX="242.0" layoutY="172.0" prefHeight="25.0" prefWidth="296.0" />
       <Button fx:id="button_bind_getter" layoutX="423.0" layoutY="255.0" mnemonicParsing="false" onAction="#onAction" text="Bind Getter" />
       <Separator layoutY="295.0" prefHeight="3.0" prefWidth="601.0" />
       <Label layoutX="20.0" layoutY="362.0" text="Existing Getter&#10;bindings" />
