--- a/src/com/jackw/views/tab2.fxml
+++ b/src/com/jackw/views/tab2.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -21,15 +21,11 @@
       </Label>
       <Label fx:id="label_steps_fixed" layoutX="36.0" layoutY="36.0" text="Follow the numbered labels to assign a API Getter to a Client Field " />
       <Label layoutX="36.0" layoutY="71.0" text="1. Accessor: " />
-      <ChoiceBox fx:id="box_accessor" layoutX="120.0" layoutY="67.0" prefWidth="150.0" />
       <Label fx:id="label_api_fields" layoutX="36.0" layoutY="105.0" text="2. Available API methods:" />
-      <ChoiceBox fx:id="box_api_methods" disable="true" layoutX="195.0" layoutY="101.0" prefHeight="25.0" prefWidth="175.0" />
       <Label layoutX="288.0" layoutY="71.0" text="Associated Client Class:" />
       <TextField fx:id="text_client_class" editable="false" layoutX="415.0" layoutY="67.0" prefHeight="25.0" prefWidth="170.0" text="?" />
       <Label fx:id="label_client_fields_typed" layoutX="36.0" layoutY="140.0" text="3. Available Client Fields by Type:" />
-      <ChoiceBox fx:id="box_client_fields_typed" disable="true" layoutX="242.0" layoutY="136.0" prefHeight="25.0" prefWidth="189.0" />
       <Label fx:id="label_all_client_fields" layoutX="36.0" layoutY="176.0" text="3. Alternative: All Client Class Fields:" />
-      <ChoiceBox fx:id="box_client_all_fields" disable="true" layoutX="242.0" layoutY="172.0" prefHeight="25.0" prefWidth="189.0" />
       <Button fx:id="button_bind_getter" layoutX="344.0" layoutY="255.0" mnemonicParsing="false" onAction="#onAction" text="Bind Getter" />
 
       <Button fx:id="button_setter" layoutX="431.0" layoutY="255.0" mnemonicParsing="false" onAction="#onAction" text="Bind Setter" />
@@ -83,5 +79,9 @@
           </Tab>
         </tabs>
       </TabPane>
+      <ComboBox fx:id="box_client_all_fields" layoutX="242.0" layoutY="172.0" prefHeight="25.0" prefWidth="329.0" />
+      <ComboBox fx:id="box_accessor" layoutX="120.0" layoutY="67.0" prefWidth="150.0" />
+      <ComboBox fx:id="box_api_methods" layoutX="195.0" layoutY="101.0" prefHeight="25.0" prefWidth="189.0" />
+      <ComboBox fx:id="box_client_fields_typed" layoutX="242.0" layoutY="136.0" prefHeight="25.0" prefWidth="196.0" />
    </children>
 </AnchorPane>
